<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color"
        tools:context=".CreateUser">


        <EditText
            android:id="@+id/input_name"
            android:layout_width="324dp"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/new_username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="324dp"
            android:layout_height="66dp"
            android:layout_marginBottom="444dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="199dp"
            android:layout_height="55dp"
            android:text="@string/register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintVertical_bias="0.161" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toEndOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintVertical_bias="0.161" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>