<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_todo"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="492dp"
            android:ems="10"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <Button
            android:id="@+id/login_button"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486" />

        <Button
            android:id="@+id/create_newuser_button"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/new_user"
            android:text="@string/new_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>